--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Availability Map</title>
+    <title>Explore points of interest by radius</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
@@ -43,14 +43,15 @@
         /* border-radius: 3px; */
         font-family: 'Open Sans', sans-serif;
         padding: 10px;
-        position: absolute;
+        /* position: absolute; */
         bottom: 0;
         right: 0;
-        position: absolute;
+        /* position: absolute; */
         margin: auto;
         border: 1px solid #0000;
         /* width: 75%; */
         box-shadow: 0 0 10px 2px rgb(0 0 0 / 10%);
+        position: relative;
     }
 
     label  {
